k8s/miniflux/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: miniflux
  namespace: miniflux

spec:
  replicas: 1
  selector:
    matchLabels: { app: miniflux }
  template:
    metadata:
      labels: { app: miniflux }
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          imagePullPolicy: IfNotPresent
          ports:
            - { name: http, containerPort: 8080 }
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 250m, memory: 128Mi }
          readinessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /healthcheck, port: 8080 }
            initialDelaySeconds: 15
            periodSeconds: 15
