k8s/miniflux/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: miniflux
  namespace: miniflux

spec:
  selector: { app: miniflux }
  ports:
    - { port: 80, targetPort: 8080 }
