k8s/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: miniflux
  namespace: miniflux

spec:
  ingressClassName: nginx
  rules:
    - host: miniflux.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: miniflux, port: { number: 80 } }
